--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/3.1.6/shaka-player.ui.min.js" integrity="sha512-3Hr3mTOnd8QL2FwjiIgsCgVFZ6t9ylKbduQ/LKpOy2CCXshP4h0AfsvrxGQsxZW2fSSa8N9rfjOYFSoOTzyuGQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script defer src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/3.1.6/controls.min.css" integrity="sha512-bheUMk5nq2GGtik6na/tbVrVa+K+k+QXu3XtZ8mq++LuGI7pY0xwNUJA1RLYEUjv1mT07iIfJQdSCKsFC1K5Ww==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +30,13 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/3.1.6/shaka-player.ui.min.js" integrity="sha512-3Hr3mTOnd8QL2FwjiIgsCgVFZ6t9ylKbduQ/LKpOy2CCXshP4h0AfsvrxGQsxZW2fSSa8N9rfjOYFSoOTzyuGQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script defer src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
+
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/3.1.6/controls.min.css" integrity="sha512-bheUMk5nq2GGtik6na/tbVrVa+K+k+QXu3XtZ8mq++LuGI7pY0xwNUJA1RLYEUjv1mT07iIfJQdSCKsFC1K5Ww==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
+    <script type="module" src="myapp.js"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
