--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/3.1.6/shaka-player.ui.min.js" integrity="sha512-3Hr3mTOnd8QL2FwjiIgsCgVFZ6t9ylKbduQ/LKpOy2CCXshP4h0AfsvrxGQsxZW2fSSa8N9rfjOYFSoOTzyuGQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script defer src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js"></script>
 
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/3.1.6/controls.min.css" integrity="sha512-bheUMk5nq2GGtik6na/tbVrVa+K+k+QXu3XtZ8mq++LuGI7pY0xwNUJA1RLYEUjv1mT07iIfJQdSCKsFC1K5Ww==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link rel="stylesheet" href="./style.css">
+
     <script type="module" src="myapp.js"></script>
 
     <div id="root"></div>
